--- a/app/src/main/res/layout/fragment_random_joke_tab.xml
+++ b/app/src/main/res/layout/fragment_random_joke_tab.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipeRefresh"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
->
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-    >
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/jokeTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:layout_marginVertical="@dimen/bigPadding"
-        />
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/addToFavorites"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_favorite" />
     </LinearLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
