--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -10,4 +10,9 @@
         android:icon="@drawable/files"
         android:title="@string/categories"
     />
+    <item
+        android:id="@+id/favoritesNavigationItem"
+        android:icon="@drawable/star"
+        android:title="@string/favorites"
+        />
 </menu>
